# routes/auth.route.ts
@@ -4,7 +4,7 @@ import upload from "../app/middlewares/multer";
 
 const router = Router();
 
-router.post("/register", upload.single('image'), AuthController.register);
+router.post("/register", upload.single('avatar'), AuthController.register);
 router.post("/login", AuthController.login);
 router.post("/google", AuthController.googleAuth);
 router.post("/google/refresh", AuthController.googleAuthRefresh);
